UPDATED: Updated SendPulse.Identity.csproj file.
- Added package references to Dgmjr.Primitives.EntityFrameworkCore, D.ClaimTypesations.CodeGenerator.DbTypesNamesAndSchemasjr.EntityFrameworkCore.Migrations, SwashUsings.
- Added EmbeddedResources item groupExtensions.cs file.

- Added SendPulseIdProperty method method to ModelBuilder extension for convenience.
- Added HasGetSendPulseIdFunction method to MigrationBuilder extension to drop the SQL function for SendPulseId.

UPDATED: UpdatedADDED: Added Constants.cs Updated ClaimType.cs file.

- Added GenerateEnumerationRecordClass attribute to generate a record class for the ClaimType enum.

REMOVED: Removed ClaimsTypes.cs file.

- Deleted the file as it is no longer needed.

--- a/src/Identity/SendPulse.Identity.props
+++ b/src/Identity/SendPulse.Identity.props
@@ -1,11 +1,11 @@
 <!--
  * SendPulse.Identity.props
- * 
+ *
  *   Created: 2022-11-27-08:02:38
  *   Modified: 2022-11-27-08:02:38
- * 
+ *
  *   Author: David G. Moore, Jr. <david@dgmjr.io>
- *   
+ *
  *   Copyright © 2022-2023 David G. Moore, Jr., All Rights Reserved
  *      License: MIT (https://opensource.org/licenses/MIT)
 -->
@@ -16,6 +16,7 @@
         <Using Include="SendPulse.Identity.ClaimTypeNames.Uris" Alias="SpUris" />
         <Using Include="SendPulse.Identity.ClaimTypeNames" Alias="SpId" />
         <Using Include="SendPulse.Identity.ClaimTypeNames.UriFragments" Alias="SpIdFrags" />
+        <Using Include="SendPulse.Identity.Enums" Alias="SpIdEnums" />
         <!-- <Using Include="Dgmjr.Abstractions" /> -->
     </ItemGroup>
     <ItemGroup>
