--- a/src/Identity/SendPulse.Identity.csproj
+++ b/src/Identity/SendPulse.Identity.csproj
@@ -11,11 +11,23 @@
 -->
 
 <Project Sdk="Microsoft.NET.Sdk">
-    <PropertyGroup>
-        <!-- <TargetFramework>netstandard2.0</TargetFramework> -->
-        <TargetFrameworks>netstandard2.0</TargetFrameworks>
-    </PropertyGroup>
-    <ItemGroup>
-        <PackageReference Include="Dgmjr.Primitives" />
-    </ItemGroup>
+  <PropertyGroup>
+    <!-- <TargetFramework>netstandard2.0</TargetFramework> -->
+    <TargetFrameworks>netstandard2.0</TargetFrameworks>
+  </PropertyGroup>
+  <ItemGroup>
+    <PackageReference Include="Dgmjr.Primitives" />
+    <PackageReference Include="Dgmjr.Primitives.EntityFrameworkCore" />
+    <PackageReference Include="Dgmjr.Identity.ClaimTypes" />
+    <PackageReference Include="Dgmjr.Enumerations.CodeGenerator" />
+    <PackageReference Include="Dgmjr.EntityFrameworkCore.Constants.DbTypesNamesAndSchemas" />
+    <PackageReference Include="Dgmjr.EntityFrameworkCore.Constants" />
+    <PackageReference Include="Dgmjr.EntityFrameworkCore.Migrations" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Usings" IncludeAssets="Build;BuildTransitive;BuildMultitargeting;Runtime;Compile" ExcludeAssets="ContentFiles;Native;Analyzers" PrivateAssets="None" />
+    <PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" />
+    <PackageReference Include="System.ComponentModel.Usings" IncludeAssets="Build;BuildTransitive;BuildMultitargeting;Runtime;Compile" ExcludeAssets="ContentFiles;Native;Analyzers" PrivateAssets="None" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResources Include="./Resources/*.*" LogicalName="%(Filename)%(Extension)" />
+  </ItemGroup>
 </Project>
