--- a/All/SendPulse.csproj
+++ b/All/SendPulse.csproj
@@ -10,10 +10,12 @@
  *      License: MIT (https://opensource.org/licenses/MIT)
 -->
 
-<Project Sdk="Microsoft.Build.Traversal">
+<Project Sdk="Microsoft.NET.Sdk">
+  <PropertyGroup>
+    <TargetFrameworks>netstandard2.0;netstandard2.1;net6.0;net8.0</TargetFrameworks>
+  </PropertyGroup>
   <ItemGroup>
-    <ProjectReference Include="./**/*.csproj" />
-    <PackageReference Remove="$(MSBuildThisFileFullPath)" />
-    <PackageReference Remove="$(MSBuildThisFile)" />
+    <ProjectReference Include="../src/**/*.csproj" />
+    <ProjectReference Remove="$(MSBuildThisFileFullPath)" />
   </ItemGroup>
 </Project>
